--- a/assistant/helm/charts/milvus/values.yaml
+++ b/assistant/helm/charts/milvus/values.yaml
@@ -44,7 +44,7 @@ applicationSpecs:
         - name: KNOWHERE_GPU_MEM_POOL_SIZE
           value: 2048;4096
         image:
-          repository: dp.apps.rancher.io/containers
+          repository: dp.apps.rancher.io
           image: milvus
           tag: 2.4.6
         ports:
