--- a/assistant/helm/charts/etcd/values.yaml
+++ b/assistant/helm/charts/etcd/values.yaml
@@ -38,8 +38,7 @@ applicationSpecs:
         - name: ETCD_SNAPSHOT_COUNT
           value: '50000'
         image:
-          repository: dp.apps.rancher.io
-          image: etcd
+          repository: dp.apps.rancher.io/containers/etcd
           tag: 3.4.36
         livenessProbe:
           exec:
