--- a/assistant/helm/charts/minio/values.yaml
+++ b/assistant/helm/charts/minio/values.yaml
@@ -35,8 +35,7 @@ applicationSpecs:
         - name: MINIO_SECRET_KEY
           value: minioadmin
         image:
-          repository: dp.apps.rancher.io
-          image: minio
+          repository: dp.apps.rancher.io/containers/minio
           tag: 0.20250408.154124-4.13
         livenessProbe:
           exec:
