--- a/nv/ollama/fleet.yaml
+++ b/nv/ollama/fleet.yaml
@@ -1,4 +1,6 @@
 # Custom helm options
+namespace: suseai
+
 helm:
   helmSecretName: basic-auth-secret
   ociRegistry:
@@ -9,5 +11,6 @@ helm:
  
   valuesFiles:
     - ollama-values.yaml
+
 
   
