--- a/nv/owui/owui-values.yaml
+++ b/nv/owui/owui-values.yaml
@@ -13,6 +13,8 @@ ollamaUrls:
 persistence:
   enabled: true
   storageClass: local-path
+ollama:
+  enabled: false
 pipelines:
   enabled: false
   persistence:
