--- a/nv/owui/owui-values.yaml
+++ b/nv/owui/owui-values.yaml
@@ -16,7 +16,7 @@ persistence:
 ollama:
   enabled: false
 pipelines:
-  enabled: true
+  enabled: false
   persistence:
     storageClass: local-path
 tika:
