--- a/nv/owui/owui-values.yaml
+++ b/nv/owui/owui-values.yaml
@@ -19,7 +19,7 @@ persistence:
 ollama:
   enabled: false
 pipelines:
-  enabled: false
+  enabled: true
   persistence:
     storageClass: local-path
 tika:
