--- a/nv/owui/owui-values.yaml
+++ b/nv/owui/owui-values.yaml
@@ -22,7 +22,7 @@ persistence:
   enabled: true
   storageClass: local-path
 ollama:
-  enabled: true
+  enabled: false
 pipelines:
   enabled: true
   persistence:
