--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -69,13 +69,11 @@ extraEnvVars:
   value: "milvus"
 - name: MILVUS_URI
   value: http://suseai-k8s-assistant-suseai-milvus.suseai.svc.cluster.local:19530
-- name: TOOL_SERVER_CONNECTIONS
-  value: 
-    {
-      "url": "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes",
-      "auth_type": "bearer",
-      "key": "top-secret"
-    }
+- name: TOOL_SERVER_CONNECTIONS_URL
+  value: "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes"
+- name: TOOL_SERVER_CONNECTIONS_KEY
+  value: "top-secret"
+
 
 
 
