--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -69,7 +69,7 @@ extraEnvVars:
   value: "milvus"
 - name: MILVUS_URI
   value: http://suseai-k8s-assistant-suseai-milvus.suseai.svc.cluster.local:19530
-- name: TOOL_SERVER_CONNECTIONS_URI
+- name: TOOL_SERVER_CONNECTIONS
   value: "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes"
 - name: TOOL_SERVER_CONNECTIONS_KEY
   value: "top-secret"
