--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -70,9 +70,16 @@ extraEnvVars:
 - name: MILVUS_URI
   value: http://suseai-k8s-assistant-suseai-milvus.suseai.svc.cluster.local:19530
 - name: TOOL_SERVER_CONNECTIONS
-  value: "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes"
-- name: TOOL_SERVER_CONNECTIONS_KEY
-  value: "top-secret"
+  value:"TOOL_SERVER_CONNECTIONS": [
+    {
+      "url": "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes",
+      "path": "string",
+      "auth_type": "bearer",
+      "key": "top-secret",
+      "config": {},
+      "additionalProp1": {}
+    }
+  ]
 
 
 
