--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -29,6 +29,8 @@ pipelines:
     storageClass: local-path
 tika:
   enabled: True
+toolServerConnection:
+  url: "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes"
 ingress:
   enabled: true
   class: ""
@@ -46,9 +48,6 @@ service:
   loadBalancerClass: ""
 # -- OpenAI base API URL to use. Defaults to the Pipelines service endpoint when Pipelines are enabled, and "https://api.openai.com/v1" if Pipelines are not enabled and this value is blank
 openaiBaseApiUrl: ""
-
-
-
 # -- Env vars added to the Open WebUI deployment. Most up-to-date environment variables can be found here: https://docs.openwebui.com/getting-started/env-configuration/
 extraEnvVars:
   # -- Default API key value for Pipelines. Should be updated in a production deployment, or be changed to the required API key if not using Pipelines
@@ -70,10 +69,6 @@ extraEnvVars:
   value: "milvus"
 - name: MILVUS_URI
   value: http://suseai-k8s-assistant-suseai-milvus.suseai.svc.cluster.local:19530
-- name: TOOLSERVERCONNECTION_URL
-  value: "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes"
-- name: TOOLSERVERCONNECTION_KEY
-  value: "top-secret"
 
 
 
