--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -29,8 +29,6 @@ pipelines:
     storageClass: local-path
 tika:
   enabled: True
-toolServerConnection:
-  url: "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes"
 ingress:
   enabled: true
   class: ""
@@ -53,6 +51,8 @@ extraEnvVars:
   # -- Default API key value for Pipelines. Should be updated in a production deployment, or be changed to the required API key if not using Pipelines
 - name: ENV
   value: "dev"
+- name: TOOL_SERVER_CONNECTIONS
+  value: http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes
 - name: OPENAI_API_KEY
   value: "0p3n-w3bu!"
 - name: DEFAULT_MODELS
