--- a/k8s-assistant/mcpo/deployment.yaml
+++ b/k8s-assistant/mcpo/deployment.yaml
@@ -48,6 +48,12 @@ data:
             "-y",
             "kubernetes-mcp-server@latest"
           ]
+        },
+      "mcp_k8s": {
+          "command": "npx",
+          "args": [
+            "@strowk/mcp-k8s"
+          ]
         }
       }
     }
