--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -47,19 +47,22 @@ service:
 # -- OpenAI base API URL to use. Defaults to the Pipelines service endpoint when Pipelines are enabled, and "https://api.openai.com/v1" if Pipelines are not enabled and this value is blank
 openaiBaseApiUrl: ""
 # -- Env vars added to the Open WebUI deployment. Most up-to-date environment variables can be found here: https://docs.openwebui.com/getting-started/env-configuration/
-toolServerConnection: http://mcpo.service
+
 extraEnvVars:
   # -- Default API key value for Pipelines. Should be updated in a production deployment, or be changed to the required API key if not using Pipelines
 - name: ENV
   value: "dev"
-- name: TOOL_SERVER_CONNECTION
-  values: 
+- name: TOOL_SERVER_CONNECTIONS
+  values: [
     {
-      "url": "http://mcpo.service",
-      "path": "string",
-      "auth_type": "bearer",
-      "key": "top-secret"
+        "url": "http://mcpo.service",
+        "path": "string",
+        "auth_type": "bearer",
+        "key": "top-secret"
     }
+  ]
+
+
 
 - name: OPENAI_API_KEY
   value: "0p3n-w3bu!"
