--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -52,9 +52,8 @@ extraEnvVars:
   # -- Default API key value for Pipelines. Should be updated in a production deployment, or be changed to the required API key if not using Pipelines
 - name: ENV
   value: "dev"
-- name: TOOL_SERVER
-  values: {
-    "connections": 
+- name: TOOL_SERVER_CONNECTIONS
+  values:
       [{
         "url": "http://mcpo-service2.suseai.svc.cluster.local:8000/mcp_k8s", 
         "path": "openapi.json", 
@@ -67,7 +66,7 @@ extraEnvVars:
             {"read": 
               {"group_ids": [], "user_ids": []}, 
               "write": {"group_ids": [], 
-              "user_ids": []}}}}]}
+              "user_ids": []}}}}]
 
 
 - name: OPENAI_API_KEY
