--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -54,19 +54,18 @@ extraEnvVars:
   value: "dev"
 - name: TOOL_SERVER_CONNECTIONS
   values:
-      [{
-        "url": "http://mcpo-service2.suseai.svc.cluster.local:8000/mcp_k8s", 
-        "path": "openapi.json", 
-        "auth_type": "bearer", 
-        "key": "top-secret", 
-        "config": 
-          {
-            "enable": true, 
-            "access_control": 
-            {"read": 
-              {"group_ids": [], "user_ids": []}, 
-              "write": {"group_ids": [], 
-              "user_ids": []}}}}]
+    { "url": "http://mcpo-service2.suseai.svc.cluster.local:8000/mcp_k8s", 
+      "path": "openapi.json", 
+      "auth_type": "bearer", 
+      "key": "top-secret", 
+      "config": 
+        {
+          "enable": true, 
+          "access_control": 
+          {"read": 
+            {"group_ids": [], "user_ids": []}, 
+            "write": {"group_ids": [], 
+            "user_ids": []}}}}
 
 
 - name: OPENAI_API_KEY
