--- a/k8s-assistant/suseai/ollama/ollama-values.yaml
+++ b/k8s-assistant/suseai/ollama/ollama-values.yaml
@@ -21,11 +21,11 @@ ollama:
   # -- List of models to pull at container startup
   models:
     pull:
-      - qwen3:0.6b
+      - qwen2.5-coder:0.5b-instruct
     create:
       - name: suseai-k8s
         template: |
-          FROM qwen3:0.6b
+          FROM qwen2.5-coder:0.5b-instruct
           # sets the temperature to 1 [higher is more creative, lower is more coherent]
           PARAMETER temperature 1
           # sets the context window size to 4096, this controls how many tokens the LLM can use as context to generate the next token
