--- a/k8s-assistant/mcpo/deployment.yaml
+++ b/k8s-assistant/mcpo/deployment.yaml
@@ -49,8 +49,8 @@ data:
             "kubernetes-mcp-server@latest"
           ]
         },
-      "mcp_sse": {
-        "url": "http://192.168.1.74:8000/sse"
-        } 
+      # "mcp_sse": {
+      #   "url": "http://192.168.1.74:8000/sse"
+      #   } 
       }
     }
