--- a/k8s-assistant/k8s_mcp_server/deployment.yaml
+++ b/k8s-assistant/k8s_mcp_server/deployment.yaml
@@ -36,7 +36,7 @@ spec:
 
       volumeMounts:
         - name: config-volume
-          mountPath: k8s-mcp-config
+          mountPath: /home/appuser/.kube
       volumes:
         - name: config-volume
           configMap:
