--- a/k8s-assistant/k8s_mcp_server/service.yaml
+++ b/k8s-assistant/k8s_mcp_server/service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: suseai
 spec:
   selector:
-    app: k8s-mcp
+    app: k8s_mcp
   ports:
     - protocol: TCP
       port: 8000
