--- a/k8s-assistant/mcpo/deployment.yaml
+++ b/k8s-assistant/mcpo/deployment.yaml
@@ -47,7 +47,7 @@ data:
     {
       "mcpServers": {
         "mcp_sse": {
-          "url": "http://k8s-mcp-service.suseai.svc.cluster.local:8001/sse"
+          "url": "http://k8s-mcp-service.suseai.svc.cluster.local:8000"
         } 
       }
     }
