--- a/k8s-assistant/mcpo/deployment.yaml
+++ b/k8s-assistant/mcpo/deployment.yaml
@@ -25,8 +25,6 @@ spec:
             - "8002"
             - "--server-type"
             - "sse"
-            - "--api-key"
-            - "top-secret"
             - "--config"
             - "/etc/config/config.json"
           volumeMounts:
@@ -47,7 +45,7 @@ data:
     {
       "mcpServers": {
         "mcp_sse": {
-          "url": "http://k8s-mcp-service.suseai.svc.cluster.local:8000"
+          "url": "http://k8s-mcp-service.suseai.svc.cluster.local:8000/sse"
         } 
       }
     }
