--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -9,7 +9,17 @@ image:
   registry: ghcr.io
   repository: open-webui/open-webui
   tag: main
-
+  command: ["curl"] # Entrypoint of the container
+  args:
+    - "-i -X POST localhost/api/tools/config "
+    - "--data-binary '/etc/config/config.json'"
+  volumeMounts:
+    - name: config-volume
+      mountPath: /etc/config
+  volumes:
+  - name: config-volume
+    configMap:
+      name: mcpo-config
   # registry: ghcr.io
   # repository: open-webui/open-webui
   # tag: main
@@ -69,6 +79,21 @@ extraEnvVars:
 - name: MILVUS_URI
   value: http://suseai-k8s-assistant-suseai-milvus.suseai.svc.cluster.local:19530
 
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mcpo-config
+  namespace: suseai
+data:
+  config.json: |
+    {
+      "mcpServers": {
+        "mcp_sse": {
+          "url": "http://k8s-mcp-service.suseai.svc.cluster.local:8000/sse"
+        } 
+      }
+    }
 
 
 
