--- a/k8s-assistant/mcpo/deployment.yaml
+++ b/k8s-assistant/mcpo/deployment.yaml
@@ -39,5 +39,15 @@ metadata:
 data:
   config.json: |
     {
-
+      "mcpServers": {
+        "mcp_sse": {
+          "url": "http://k8s-mcp-service.suseai.svc.cluster.local:8001/sse"
+        },
+        "mcp_stdio": {
+          "command": "python",
+          "args": [
+            "mcp_stdio.py"
+          ]
+        }
+      }
     }
