--- a/k8s-assistant/mcpo/deployment.yaml
+++ b/k8s-assistant/mcpo/deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - containerPort: 8000
           command: ["/bin/bash"] # Entrypoint of the container
           args:
-            - "pip install kubectl-mcp-tool &"
+            - "pip install kubectl-mcp-tool"
             - "mcpo"
             - "--config"
             - "/etc/config/config.json"
