--- a/k8s-assistant/mcpo/deployment.yaml
+++ b/k8s-assistant/mcpo/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           image: ghcr.io/open-webui/mcpo:latest
           ports:
             - containerPort: 8000
-          command: ["/bin/bash"] # Entrypoint of the container
+          command: ["/bin/bash -c "] # Entrypoint of the container
           args:
             - "pip install kubectl-mcp-tool"
             - "mcpo"
