--- a/k8s-assistant/k8s_mcp_server/deployment.yaml
+++ b/k8s-assistant/k8s_mcp_server/deployment.yaml
@@ -44,10 +44,7 @@ data:
       "mcpServers": {
         "kubernetes": {
           "command": "npx",
-          "args": [
-            "-y",
-            "kubernetes-mcp-server@latest"
-          ]
+          "args": ["mcp-server-kubernetes"]
         }
       }
     }
