--- a/k8s-assistant/k8s_mcp_server/deployment.yaml
+++ b/k8s-assistant/k8s_mcp_server/deployment.yaml
@@ -21,6 +21,8 @@ spec:
             - containerPort: 8000
           command: ["mcpo"] # Entrypoint of the container
           args: 
+            - "--port"
+            - "8000"
             - "--api-key"
             - "top-secret"
             - "--config"
