--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -11,7 +11,7 @@ image:
   tag: main
   command: ["curl"] # Entrypoint of the container
   args:
-    - "-i -X POST localhost/api/tools/config "
+    - "-i -X POST http://localhost/api/tools/config "
     - "--data-binary '/etc/config/config.json'"
   volumeMounts:
     - name: config-volume
@@ -62,6 +62,8 @@ extraEnvVars:
   # -- Default API key value for Pipelines. Should be updated in a production deployment, or be changed to the required API key if not using Pipelines
 - name: ENV
   value: "dev"
+- name: TOOL_SERVER_CONNECTIONS
+  value: ['http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes']
 - name: OPENAI_API_KEY
   value: "0p3n-w3bu!"
 - name: DEFAULT_MODELS
