--- a/k8s-assistant/suseai/owui/owui-values.yaml
+++ b/k8s-assistant/suseai/owui/owui-values.yaml
@@ -53,7 +53,7 @@ extraEnvVars:
 - name: ENV
   value: "dev"
 - name: TOOL_SERVER_CONNECTIONS
-  value: '{"[{"url": "http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes","path": "/openapi.json","auth_type": "Bearer","key": "top-secret","config": {},"additionalProp1": {}}]"}'
+  value: '"input": ["http://mcpo-service.suseai.svc.cluster.local:8000/kubernetes","path": "/openapi.json","auth_type": "Bearer","key": "top-secret","config": {},"additionalProp1": {}]"'
 - name: OPENAI_API_KEY
   value: "0p3n-w3bu!"
 - name: DEFAULT_MODELS
