--- a/k8s-assistant/suseai/milvus/milvus-values.yaml
+++ b/k8s-assistant/suseai/milvus/milvus-values.yaml
@@ -22,7 +22,7 @@ minio:
     requests:
       memory: 1024Mi
 kafka:
-  enabled: true
+  enabled: false
   name: kafka
   replicaCount: 1
   broker:
