--- a/suse-ai/milvus/fleet.yaml
+++ b/suse-ai/milvus/fleet.yaml
@@ -2,9 +2,9 @@ namespace: suseai
 
 # Custom helm options
 helm:
-  helmSecretName: basic-auth-secret
-  ociRegistry:
-    authSecretName: application-collection
+  # helmSecretName: basic-auth-secret
+  # ociRegistry:
+  #   authSecretName: application-collection
   chart: "oci://dp.apps.rancher.io/charts/milvus"
   version: "4.2.2"
 
