--- a/suse-ai/ollama/fleet.yaml
+++ b/suse-ai/ollama/fleet.yaml
@@ -2,9 +2,9 @@
 namespace: suseai
 
 helm:
-  helmSecretName: basic-auth-secret
-  ociRegistry:
-    authSecretName: application-collection
+  # helmSecretName: basic-auth-secret
+  # ociRegistry:
+  #   authSecretName: application-collection
 
   chart: "oci://dp.apps.rancher.io/charts/ollama"
   version: "1.16.0"
