--- a/suse-ai/ollama/fleet.yaml
+++ b/suse-ai/ollama/fleet.yaml
@@ -3,8 +3,9 @@ namespace: suseai
 
 helm:
   # helmSecretName: basic-auth-secret
-  # ociRegistry:
-  #   authSecretName: application-collection
+  ociRegistry:
+    authSecretName: application-collection
+    basicHTTP: false
 
   chart: "oci://dp.apps.rancher.io/charts/ollama"
   version: "1.16.0"
