--- a/suse-ai/milvus/fleet.yaml
+++ b/suse-ai/milvus/fleet.yaml
@@ -3,8 +3,9 @@ namespace: suseai
 # Custom helm options
 helm:
   # helmSecretName: basic-auth-secret
-  # ociRegistry:
-  #   authSecretName: application-collection
+  ociRegistry:
+    authSecretName: application-collection
+    basicHTTP: false
   chart: "oci://dp.apps.rancher.io/charts/milvus"
   version: "4.2.2"
 
